change index html 2nd

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid m-3">
         <div class="justify-content-center">
             <div class="h1">Flutter to Google Sheet Demo App</div>
-            <a class="btn btn-primary m-2" href="web/index.html" target="_blank" role="button">Run Flutter Web App</a>
+            <a class="btn btn-primary m-2" href="web/" target="_blank" role="button">Run Flutter Web App</a>
             <a class="btn btn-outline-success m-2"
                 href="https://docs.google.com/spreadsheets/d/1OOArrqjOqmD4GiJOWlluZ4woTMH_qaV6RKv4JXnT3Hk/edit?usp=sharing"
                 target="_blank" role="button">View Google Sheet</a>
